rename static_name to pretty_name option

--- a/lib/template/.ufo/settings.yml.tt
+++ b/lib/template/.ufo/settings.yml.tt
@@ -7,11 +7,12 @@ base:
   # clean_keep: 30
   # ecr_keep: 30
   network_profile: default # .ufo/settings/network/default.yml file
-  # If you want to have prettier static names for resources set static_name to true.
+  network_profile: default # .ufo/settings/network/default.yml file
+  # If you want to have prettier name set for the ECS service name
   # There are some cavaets with this. Updating properties on resources that require
   # replacment might not work. For example, adding and removing a load balancer.
   # In these cases, you must delete the entire ecs service and recreate it.
-  static_name: false
+  pretty_name: false
 
 development:
   # cluster: development
