separate cfn profile from network profile

--- a/lib/template/.ufo/settings.yml.tt
+++ b/lib/template/.ufo/settings.yml.tt
@@ -7,7 +7,7 @@ base:
   # clean_keep: 30
   # ecr_keep: 30
   network_profile: default # .ufo/settings/network/default.yml file
-  network_profile: default # .ufo/settings/network/default.yml file
+  cfn_profile: default # .ufo/settings/cfn/default.yml file
   # If you want to have prettier name set for the ECS service name
   # There are some cavaets with this. Updating properties on resources that require
   # replacment might not work. For example, adding and removing a load balancer.
