--- a/docs/_includes/commands.html
+++ b/docs/_includes/commands.html
@@ -7,13 +7,13 @@
                     <div class="commands">
 {% highlight sh %}
 ufo ship
-
-ufo docker build
-
-ufo tasks build
-
+ufo ps
+ufo current
+ufo apps
 ufo scale
-
+ufo docker build
+ufo tasks build
+ufo rollback
 ufo destroy
 {% endhighlight %}
                     </div>
