--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -17,11 +17,13 @@
                 <li><a href="{% link _docs/settings.md %}">Settings</a></li>
                 <li><a href="{% link _docs/settings-network.md %}">Settings Network</a></li>
                 <li><a href="{% link _docs/settings-cfn.md %}">Settings Cfn</a></li>
-                <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
                 <li><a href="{% link _docs/params.md %}">Params</a></li>
                 <li><a href="{% link _docs/ufo-env.md %}">Ufo Env</a></li>
                 <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
                 <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
+                <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
+                <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
+                <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
                 <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
                 <li><a href="{% link _docs/auto-completion.md %}">Auto-Completion</a></li>
                 <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
@@ -32,19 +34,15 @@
                 <li><a href="{% link articles.md %}">Articles</a></li>
                 <li><a href="{% link reference.md %}">CLI Reference</a></li>
             </ul>
-        <li><a href="{% link docs.md %}">Troubleshooting</a>
+        <li><a href="{% link docs.md %}">More</a>
             <ul>
                 <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
-                <li><a href="{% link _docs/cloudformation-stack.md %}">CloudFormation Stack</a></li>
-                <li><a href="{% link _docs/customize-ufo.md %}">Customize Ufo</a></li>
-                <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
-                <li><a href="{% link _docs/rollback-errors.md %}">Rollback Errors</a></li>
-                <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
-                <li><a href="{% link _docs/settings-network.md %}">Settings Network</a></li>
-                <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
+
+                <li><a href="{% link _docs/why-cloudformation.md %}">Why CloudFormation</a></li>
+                <li><a href="{% link _docs/customize-cloudformation.md %}">Customize CloudFormation</a></li>
+
                 <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Extra Env</a></li>
                 <li><a href="{% link _docs/upgrade4.md %}">Upgrade 4</a></li>
-                <li><a href="{% link _docs/why-cloudformation.md %}">Why CloudFormation</a></li>
             </ul>
         </li>
         </li>
