--- a/docs/_includes/css/ufo.css
+++ b/docs/_includes/css/ufo.css
@@ -72,6 +72,7 @@ section#main .intro-text .skills {
     /*background-color: green;*/
     margin-top: 40px;
     font-size: 1.2em;
+    color: #9acfe0;
 }
 
 .content-nav ul, .content-nav ol {
