--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -18,31 +18,29 @@
                 <li><a href="{% link _docs/settings-network.md %}">Settings Network</a></li>
                 <li><a href="{% link _docs/settings-cfn.md %}">Settings Cfn</a></li>
                 <li><a href="{% link _docs/params.md %}">Params</a></li>
-                <li><a href="{% link _docs/ufo-env.md %}">Ufo Env</a></li>
                 <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
                 <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
+                <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
+                <li><a href="{% link _docs/ufo-env.md %}">Ufo Env</a></li>
+                <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Env Extra</a></li>
+                <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
                 <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
                 <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
-                <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
-                <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
-                <li><a href="{% link _docs/auto-completion.md %}">Auto-Completion</a></li>
+                <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
+            </ul>
+        <li>More
+            <ul>
+                <li><a href="{% link _docs/why-cloudformation.md %}">Why CloudFormation</a></li>
+                <li><a href="{% link _docs/customize-cloudformation.md %}">Customize CloudFormation</a></li>
+                <li><a href="{% link _docs/upgrade4.md %}">Upgrade 4</a></li>
                 <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
                 <li><a href="{% link _docs/single-task.md %}">Run Single Task</a></li>
                 <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
                 <li><a href="{% link _docs/automated-cleanup.md %}">Automated Cleanup</a></li>
-                <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
+                <li><a href="{% link _docs/auto-completion.md %}">Auto-Completion</a></li>
                 <li><a href="{% link articles.md %}">Articles</a></li>
+                <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
                 <li><a href="{% link reference.md %}">CLI Reference</a></li>
-            </ul>
-        <li><a href="{% link docs.md %}">More</a>
-            <ul>
-                <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
-
-                <li><a href="{% link _docs/why-cloudformation.md %}">Why CloudFormation</a></li>
-                <li><a href="{% link _docs/customize-cloudformation.md %}">Customize CloudFormation</a></li>
-
-                <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Extra Env</a></li>
-                <li><a href="{% link _docs/upgrade4.md %}">Upgrade 4</a></li>
             </ul>
         </li>
         </li>
