--- a/docs/_includes/commands.html
+++ b/docs/_includes/commands.html
@@ -22,7 +22,7 @@ ufo destroy
                     <h3>variables/base.rb</h3>
                     <div class="commands">
 {% highlight ruby %}
-@image = helper.full_image_name # includes the git sha tongueroo/hi:ufo-[sha].
+@image = helper.full_image_name # includes the git sha tongueroo/demo-ufo:ufo-[sha].
 @cpu = 128
 @memory_reservation = 256
 @environment = helper.env_vars(%Q{
