--- a/lib/template/.ufo/variables/base.rb.tt
+++ b/lib/template/.ufo/variables/base.rb.tt
@@ -1,6 +1,6 @@
 # Example ufo/variables/base.rb
 # More info on how variables work: http://ufoships.com/docs/variables/
-@image = helper.full_image_name # includes the git sha tongueroo/hi:ufo-[sha].
+@image = helper.full_image_name # includes the git sha tongueroo/demo-ufo:ufo-[sha].
 @environment = helper.env_file(".env")
 <% if @options[:launch_type] == "fargate" -%>
 # Ensure that the cpu and memory values are a supported combination by Fargate.
