make ufo init --app option infer name

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -21,6 +21,7 @@
                 <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
                 <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
                 <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
+                <li><a href="{% link _docs/fargate.md %}">Fargate</a></li>
                 <li><a href="{% link _docs/ufo-env.md %}">Ufo Env</a></li>
                 <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Env Extra</a></li>
                 <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
