docs: ssl support

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -26,6 +26,7 @@
                 <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Env Extra</a></li>
                 <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
                 <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
+                <li><a href="{% link _docs/ssl-support.md %}">SSL Support</a></li>
                 <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
                 <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
             </ul>
@@ -33,6 +34,7 @@
             <ul>
                 <li><a href="{% link _docs/why-cloudformation.md %}">Why CloudFormation</a></li>
                 <li><a href="{% link _docs/customize-cloudformation.md %}">Customize CloudFormation</a></li>
+                <li><a href="{% link _docs/stuck-cloudformation.md %}">Stuck CloudFormation</a></li>
                 <li><a href="{% link _docs/upgrade4.md %}">Upgrade 4</a></li>
                 <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
                 <li><a href="{% link _docs/single-task.md %}">Run Single Task</a></li>
