update docs, show elb type in ufo ps also

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -26,6 +26,7 @@
                 <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Env Extra</a></li>
                 <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
                 <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
+                <li><a href="{% link _docs/security-groups.md %}">Security Groups</a></li>
                 <li><a href="{% link _docs/ssl-support.md %}">SSL Support</a></li>
                 <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
                 <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
