--- a/docs/_includes/example.html
+++ b/docs/_includes/example.html
@@ -9,69 +9,52 @@
     <div class='row'>
       <div class='col-md-offset-1 col-md-10'>
 {% highlight sh %}
-$ ufo ship demo-web
+$ ufo ship
 Building docker image with:
-  docker build -t tongueroo/demo-ufo:ufo-2017-06-11T19-43-19-bc80e84 -f Dockerfile .
-Sending build context to Docker daemon 719.4 kB
-Step 1 : FROM ruby:2.3.3
- ---> 0e1db669d557
-Step 2 : RUN apt-get update && apt-get install -y build-essential nodejs
+  docker build -t tongueroo/demo-ufo:ufo-2018-07-03T20-42-48-9cb7bf9 -f Dockerfile .
+Sending build context to Docker daemon  295.4kB
+Step 1/10 : FROM ruby:2.5.1
+ ---> 857bc7ff918f
+...
+Step 10/10 : CMD bin/web
  ---> Using cache
- ---> 931ace833716
-Step 3 : WORKDIR /app
- ---> Using cache
- ---> cbb5c15ad1b1
-Step 4 : ADD Gemfile /app/Gemfile
- ---> Using cache
- ---> f1e152250b3e
-Step 5 : ADD Gemfile.lock /app/Gemfile.lock
- ---> Using cache
- ---> 779ebef7e4e2
-Step 6 : RUN bundle install --system
- ---> Using cache
- ---> 82fa66ab7513
-Step 7 : ADD . /app
- ---> 7c19cea5f89b
-Removing intermediate container 54f2f54b6d8a
-Step 8 : RUN bundle install --system
- ---> Running in 1deb79965099
-Bundle complete! 12 Gemfile dependencies, 56 gems now installed.
-Bundled gems are installed into /usr/local/bundle.
- ---> 43a24c8073cb
-Removing intermediate container 1deb79965099
-Step 9 : RUN chmod a+x bin/*
- ---> Running in 1c4be40ec03c
- ---> 167ed122d8ae
-Removing intermediate container 1c4be40ec03c
-Step 10 : EXPOSE 3000
- ---> Running in 38b7a02a584e
- ---> 12e511582f93
-Removing intermediate container 38b7a02a584e
-Step 11 : CMD bin/web
- ---> Running in f56d659a2c9e
- ---> 1689ba53ca03
-Removing intermediate container f56d659a2c9e
-Successfully built 1689ba53ca03
-Docker image tongueroo/demo-ufo:ufo-2017-06-11T19-43-19-bc80e84 built.  Took 34s.
+ ---> c02b8f7eb183
+Successfully built c02b8f7eb183
+Successfully tagged tongueroo/demo-ufo:ufo-2018-07-03T20-42-48-9cb7bf9
+Docker image tongueroo/demo-ufo:ufo-2018-07-03T20-42-48-9cb7bf9 built.
+Docker build took 0s.
+=> docker push tongueroo/demo-ufo:ufo-2018-07-03T20-42-48-9cb7bf9
 The push refers to a repository [docker.io/tongueroo/demo-ufo]
-0826214f2b9a: Pushed
-ee30634e4a5d: Pushed
-277ff31e79b4: Layer already exists
-a361a4de05df: Layer already exists
-ufo-2017-06-11T19-43-19-bc80e84: digest: sha256:6381ff8d4413edf0c13926def1d55d0f805d169d686f59cdee3abb960b52eb9a size: 3464
-Pushed tongueroo/demo-ufo:ufo-2017-06-11T19-43-19-bc80e84 docker image. Took 10s.
+f8172fcf60ff: Layer already exists
+a51c4b90e727: Layer already exists
+...
+0f3a12fef684: Layer already exists
+ufo-2018-07-03T20-42-48-9cb7bf9: digest: sha256:00eade753ff8721f7f96a505ea3bec6b1fd334c930dcecc20a2043ae9300496d size: 3458
+Pushed tongueroo/demo-ufo:ufo-2018-07-03T20-42-48-9cb7bf9 docker image.
+Docker push took 4s.
 Building Task Definitions...
 Generating Task Definitions:
-  ufo/output/demo-web.json
-  ufo/output/demo-worker.json
-  ufo/output/demo-clock.json
-Task Definitions built in ufo/output.
+  .ufo/output/demo-web.json
+  .ufo/output/demo-worker.json
+  .ufo/output/demo-clock.json
+Task Definitions built in .ufo/output
+Equivalent aws cli command:
+  aws ecs register-task-definition --cli-input-json file://.ufo/output/demo-web.json
 demo-web task definition registered.
-Shipping demo-web...
-demo-web service updated on stag cluster with task demo-web
+Deploying demo-web...
+Ensuring log group for demo-web task definition exists
+Log group name: ecs/demo-web
+Updating stack development-demo-web...
+Generated template saved at: /tmp/ufo/development-demo-web/stack.yml
+Generated parameters saved at: /tmp/ufo/development-demo-web/parameters.yml
+08:43:07PM UPDATE_IN_PROGRESS AWS::CloudFormation::Stack development-demo-web User Initiated
+08:43:11PM UPDATE_IN_PROGRESS AWS::ECS::Service Ecs
+08:45:12PM UPDATE_COMPLETE AWS::ECS::Service Ecs
+08:45:14PM UPDATE_COMPLETE_CLEANUP_IN_PROGRESS AWS::CloudFormation::Stack development-demo-web
+08:45:15PM UPDATE_COMPLETE AWS::CloudFormation::Stack development-demo-web
+Stack success status: UPDATE_COMPLETE
+Time took for stack deployment: 2m 13s.
 Software shipped!
-Cleaning up docker images...
-Running: docker rmi tongueroo/demo-ufo:ufo-2017-06-11T11-37-00-bc80e84
 $
 {% endhighlight %}
       </div>
