--- a/lib/template/.ufo/settings/cfn/default.yml.tt
+++ b/lib/template/.ufo/settings/cfn/default.yml.tt
@@ -17,33 +17,48 @@ target_group:
                   #   application elb: HTTP
                   #   network elb: TCP
                   # so we can keep this commented out, unless we need HTTPS at the app level
+  # Health check settings are supported by application load balancer only:
+  # health_check_path: /upcheck
+  # health_check_interval_seconds: 30 # 10 or 30 for network ELB
+  # health_check_protocol: HTTP # HTTP or HTTPS
+  # health_check_port: traffic-port
+  # unhealthy_threshold_count: 10
   target_group_attributes:
   - key: deregistration_delay.timeout_seconds
     value: 1
-  # network elb support health_check_interval_seconds of 10 or 30
-  # health_check_interval_seconds: 30
-
-  # health check settings are supported by application load balancer only:
-  # health_check_protocol: HTTP # HTTP or HTTPS
-  # health_check_path: /
-  # health_check_port: traffic-port
-  # unhealthy_threshold_count: 10
 
 # https://docs.aws.amazon.com/fr_fr/elasticloadbalancing/latest/APIReference/API_CreateListener.html
 #
-# If HTTPS and SSL is required this is where it would normally be set. Application ELBs
-# support SSL termination. Network load balancers do not.
+# This is the default listener and normally should listen to port 80.
 listener:
-  port: 80 # required by ufo, used in cloudformation template
+  port: 80
   # For Application Load Balancers, the supported protocols are HTTP and HTTPS. For Network Load Balancers, the supported protocol is TCP.
   # protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP
-                  # ufo sets defaults in cloudformation template
-                  #   application elb: HTTP
+                  # ufo sets these defaults:
+                  #   application elb: HTTP  # unless port is 443
+                  #   application elb: HTTPS # if port is 443
                   #   network elb: TCP
-                  # so we can keep this commented out, unless we need HTTPS at elb level
-  # certificates is required if using HTTPS protocol with application
+                  # Can keep protocol commented out,
+                  # unless need to override the defaults.
+
+# If HTTPS and SSL is required then the listener_ssl config is what you need.
+#   Application ELBs support SSL termination.
+#   Network load balancers do not.
+#
+# ufo current creates both a normal listener and an ssl listener, even if you
+# are not using it. Both listeners point to the same target group.
+listener_ssl:
+  port: 443
+  # protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP
+                  # ufo handles setting the defaults:
+                  #   application elb: HTTP  # unless port is 443
+                  #   application elb: HTTPS # if port is 443
+                  #   network elb: TCP
+  # Certificates are supported by application load balancers only.
+  # Network load balancers do not support SSL termination.
   # certificates:
-  # - certificate: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
+  # - certificate_arn: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
+
 
 # Configure dns to automatically be associated with the ELB dns name.
 # Note, the route53 record set for the domain name must already exist.
