--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/img/logos/ufo-logo.png" alt="">
                     <div class="intro-text">
-                        <span class="name">{{ site.title }}</span>
+                        <span class="name">UFO</span>
                         <hr class="star-light">
                         <span class="skills">{{ site.description }}</span>
                     </div>
