--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/#page-top"><img class="navbar-logo" src="/img/logos/ufo-site-header.png" />{{ site.title }}</a>
+                <a class="navbar-brand" href="/#page-top"><img class="navbar-logo" src="/img/logos/ufo-site-header.png" />UFO</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
