--- a/docs/_includes/css/ufo.css
+++ b/docs/_includes/css/ufo.css
@@ -171,3 +171,24 @@ table.ship-options td:first-child {
     padding-bottom: 0;
     margin-bottom: 0;
 }
+
+.video-box {
+max-width: 700px;
+text-align: center;
+margin: 0 auto 20px;
+.video-container {
+  position:relative;
+  padding-bottom:56.25%;
+  padding-top:30px;
+  height:0;
+  overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
+}
