--- a/docs/_includes/css/ufo.css
+++ b/docs/_includes/css/ufo.css
@@ -173,22 +173,23 @@ table.ship-options td:first-child {
 }
 
 .video-box {
-max-width: 700px;
-text-align: center;
-margin: 0 auto 20px;
-.video-container {
-  position:relative;
-  padding-bottom:56.25%;
-  padding-top:30px;
-  height:0;
-  overflow:hidden;
+    max-width: 700px;
+    text-align: center;
+    margin: 0 auto 20px;
 }
+.video-box .video-container {
+      position:relative;
+      padding-bottom:56.25%;
+      padding-top:30px;
+      height:0;
+      overflow:hidden;
+    }
 
-.video-container iframe, .video-container object, .video-container embed {
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-}
-}
+.video-box .video-container iframe, .video-box .video-container object, .video-box .video-container embed {
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+    }
+  }
