--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -27,6 +27,7 @@
                 <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
                 <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
                 <li><a href="{% link _docs/security-groups.md %}">Security Groups</a></li>
+                <li><a href="{% link _docs/ecs-network-mode.md %}">ECS Network Mode</a></li>
                 <li><a href="{% link _docs/ssl-support.md %}">SSL Support</a></li>
                 <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
                 <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
