--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,9 +1,9 @@
     <!-- Header -->
-    <header>
+    <header style="background-color: #12153e">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/img/logos/ufo-logo.png" alt="">
+                    <img class="img-responsive" src="/img/logos/ufo-logo-2.png" alt="">
                     <div class="intro-text">
                         <span class="name">UFO</span>
                         <hr class="star-light">
