update docs: redirection support

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -30,6 +30,7 @@
                 <li><a href="{% link _docs/ecs-network-mode.md %}">ECS Network Mode</a></li>
                 <li><a href="{% link _docs/ssl-support.md %}">SSL Support</a></li>
                 <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
+                <li><a href="{% link _docs/redirection-support.md %}">Redirection Support</a></li>
                 <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
             </ul>
         <li>More
