--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -1,6 +1,7 @@
 <div class="col-md-3 content-nav">
     <ul>
-        <li><a href="{% link quick-start.md %}">Quick Start</a></li>
+        <li><a href="{% link quick-start.md %}">Quick Start: Fargate</a></li>
+        <li><a href="{% link _docs/quick-start-ec2.md %}">Quick Start: EC2</a></li>
         <li><a href="{% link _docs/install.md %}">Installation</a></li>
         <li><a href="{% link _docs/tutorial.md %}">Tutorial</a>
             <ul class="tutorial">
@@ -21,7 +22,6 @@
                 <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
                 <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
                 <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
-                <li><a href="{% link _docs/fargate.md %}">Fargate</a></li>
                 <li><a href="{% link _docs/ufo-env.md %}">Ufo Env</a></li>
                 <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Env Extra</a></li>
                 <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
