--- a/docs/_includes/summary.html
+++ b/docs/_includes/summary.html
@@ -8,12 +8,13 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-lg-offset-3">
-              <p>The main command is <code>ufo ship</code>. Here's summary of what it does:</p>
+              <p>The main command is <code>ufo ship</code>. Here's what it does:</p>
 
               <ol class="landing-summary">
                 <li>Builds a docker image.</li>
                 <li>Registers the ECS template definition.</li>
                 <li>Deploys to ECS.</li>
+                <li>Creates an ELB.</li>
               </ol>
             </div>
         </div>
