--- a/docs/_includes/css/syntax.css
+++ b/docs/_includes/css/syntax.css
@@ -58,3 +58,8 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+/* fix css the pre code block that is generated with ```*/
+.highlighter-rouge .highlight {
+  background: #ecf0f1;
+}
