--- a/lib/template/.ufo/settings.yml.tt
+++ b/lib/template/.ufo/settings.yml.tt
@@ -12,6 +12,7 @@ base:
   # There are some cavaets with this. Updating properties on resources that require
   # replacment might not work. For example, adding and removing a load balancer.
   # In these cases, you must delete the entire ecs service and recreate it.
+  stack_naming: append_env
 
 development:
   # cluster: development
