change setting aws_profile to tightly bind to ufo_env, simpler to understand

--- a/lib/template/.ufo/settings.yml.tt
+++ b/lib/template/.ufo/settings.yml.tt
@@ -16,14 +16,10 @@ base:
 
 development:
   # cluster: development
-  # When you have AWS_PROFILE set to one of these values, ufo will switch to the desired
-  # environment. This prevents you from switching AWS_PROFILE, forgetting to
-  # also switch UFO_ENV, and accidentally deploying to production vs development.
-  # aws_profiles:
-  #   - dev_profile1
-  #   - dev_profile2
+  # The aws_profile tightly binds UFO_ENV to AWS_PROFILE and vice-versa.
+  # aws_profile: dev_profile
 
 production:
   # cluster: production
-  # aws_profiles:
-  #   - prod_profile
+  # The aws_profile tightly binds UFO_ENV to AWS_PROFILE and vice-versa.
+  # aws_profile: prod_profile
