--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -25,13 +25,15 @@
                 <li><a href="{% link _docs/ufo-env.md %}">Ufo Env</a></li>
                 <li><a href="{% link _docs/ufo-env-extra.md %}">Ufo Env Extra</a></li>
                 <li><a href="{% link _docs/ufo-current.md %}">Ufo Current</a></li>
-                <li><a href="{% link _docs/load-balancer.md %}">Load Balancer</a></li>
-                <li><a href="{% link _docs/security-groups.md %}">Security Groups</a></li>
-                <li><a href="{% link _docs/ecs-network-mode.md %}">ECS Network Mode</a></li>
-                <li><a href="{% link _docs/ssl-support.md %}">SSL Support</a></li>
-                <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
-                <li><a href="{% link _docs/redirection-support.md %}">Redirection Support</a></li>
-                <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
+        <li>Extras
+            <ul>
+                <li><a href="{% link _docs/extras/load-balancer.md %}">Load Balancer</a></li>
+                <li><a href="{% link _docs/extras/security-groups.md %}">Security Groups</a></li>
+                <li><a href="{% link _docs/extras/ecs-network-mode.md %}">ECS Network Mode</a></li>
+                <li><a href="{% link _docs/extras/ssl-support.md %}">SSL Support</a></li>
+                <li><a href="{% link _docs/extras/route53-support.md %}">Route53 Support</a></li>
+                <li><a href="{% link _docs/extras/redirection-support.md %}">Redirection Support</a></li>
+                <li><a href="{% link _docs/extras/minimal-deploy-iam.md %}">Minimal Deploy IAM</a></li>
             </ul>
         <li><a href="{% link _docs/upgrading.md %}">Upgrading</a>
             <ul>
@@ -43,14 +45,15 @@
         </li>
         <li>More
             <ul>
-                <li><a href="{% link _docs/why-cloudformation.md %}">Why CloudFormation</a></li>
-                <li><a href="{% link _docs/customize-cloudformation.md %}">Customize CloudFormation</a></li>
-                <li><a href="{% link _docs/stuck-cloudformation.md %}">Stuck CloudFormation</a></li>
-                <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
-                <li><a href="{% link _docs/single-task.md %}">Run Single Task</a></li>
-                <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
-                <li><a href="{% link _docs/automated-cleanup.md %}">Automated Cleanup</a></li>
-                <li><a href="{% link _docs/auto-completion.md %}">Auto-Completion</a></li>
+                <li><a href="{% link _docs/more/why-cloudformation.md %}">Why CloudFormation</a></li>
+                <li><a href="{% link _docs/more/customize-cloudformation.md %}">Customize CloudFormation</a></li>
+                <li><a href="{% link _docs/more/stuck-cloudformation.md %}">Stuck CloudFormation</a></li>
+                <li><a href="{% link _docs/more/run-in-pieces.md %}">Run In Pieces</a></li>
+                <li><a href="{% link _docs/more/single-task.md %}">Run Single Task</a></li>
+                <li><a href="{% link _docs/more/migrations.md %}">Database Migrations</a></li>
+                <li><a href="{% link _docs/more/automated-cleanup.md %}">Automated Cleanup</a></li>
+                <li><a href="{% link _docs/more/auto-completion.md %}">Auto-Completion</a></li>
+                <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
                 <li><a href="{% link articles.md %}">Articles</a></li>
                 <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
                 <li><a href="{% link reference.md %}">CLI Reference</a></li>
