--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -34,6 +34,7 @@
                 <li><a href="{% link _docs/extras/route53-support.md %}">Route53 Support</a></li>
                 <li><a href="{% link _docs/extras/redirection-support.md %}">Redirection Support</a></li>
                 <li><a href="{% link _docs/extras/minimal-deploy-iam.md %}">Minimal Deploy IAM</a></li>
+                <li><a href="{% link _docs/extras/codebuild-iam-role.md %}">CodeBuild IAM Role</a></li>
             </ul>
         <li><a href="{% link _docs/upgrading.md %}">Upgrading</a>
             <ul>
