introduce Docckerfile.erb and dockerfile_variables.yml

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -42,6 +42,7 @@
                 <li><a href="{% link _docs/extras/redirection-support.md %}">Redirection Support</a></li>
                 <li><a href="{% link _docs/extras/minimal-deploy-iam.md %}">Minimal Deploy IAM</a></li>
                 <li><a href="{% link _docs/extras/codebuild-iam-role.md %}">CodeBuild IAM Role</a></li>
+                <li><a href="{% link _docs/extras/dockerfile-erb.md %}">Dockerfile.erb</a></li>
             </ul>
         </li>
         <li><a href="{% link _docs/upgrading.md %}">Upgrading</a>
