Add support for secrets in the template
* Add flag to enable secrets

--- a/lib/template/.ufo/templates/main.json.erb
+++ b/lib/template/.ufo/templates/main.json.erb
@@ -24,6 +24,9 @@
       <% if @environment %>
       "environment": <%= @environment.to_json %>,
       <% end %>
+      <% if @secrets %>
+      "secrets": <%= @secrets.to_json %>,
+      <% end %>
       <% if @awslogs_group %>
       "logConfiguration": {
         "logDriver": "awslogs",
