--- a/lib/template/.ufo/templates/fargate.json.erb
+++ b/lib/template/.ufo/templates/fargate.json.erb
@@ -21,6 +21,9 @@
       <% if @environment %>
       "environment": <%= @environment.to_json %>,
       <% end %>
+      <% if @secrets %>
+      "secrets": <%= @secrets.to_json %>,
+      <% end %>
       <% if @awslogs_group %>
       "logConfiguration": {
         "logDriver": "awslogs",
